fix .main-menu overflow scrollbar style

--- a/resources/css/channel.css
+++ b/resources/css/channel.css
@@ -644,8 +644,29 @@ input::placeholder {
   vertical-align:middle;
   width: 190px;
 }
+.main-menu .ct-hidden {
+  height: 380px;
+  overflow-y: auto;
+  overflow-scrolling: auto;
+}
 
-.main-menu>.hot {
+.main-menu>.ct-hidden::-webkit-scrollbar {
+  width: 6px;
+  border-radius: 20px;
+  background-color: #222;
+}
+.main-menu>.ct-hidden::-webkit-scrollbar-thumb {
+  border-radius: 20px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.15);
+  background-color: #666;
+}
+.main-menu>.ct-hidden::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.15);
+  border-radius: 20px;
+  background-color: #222;
+}
+
+.main-menu .hot {
   opacity: 1;
   width: 240px;
   display: flex;
@@ -657,7 +678,7 @@ input::placeholder {
   position: relative;
 }
 
-.main-menu>.games::before {
+.main-menu .games::before {
   content: '热门游戏';
   display: inline-block;
   position: absolute;
@@ -667,7 +688,7 @@ input::placeholder {
   color: #888;
 }
 
-.main-menu>.cashs::before {
+.main-menu .cashs::before {
   content: '热门现金网';
   display: inline-block;
   position: absolute;
@@ -677,13 +698,13 @@ input::placeholder {
   color: #888;
 }
 
-.main-menu>.hot li {
+.main-menu .hot li {
   display: inline-block;
   margin: 0 0 10px 0;
   text-align: center;
 }
 
-.main-menu>.hot li>a {
+.main-menu .hot li>a {
   display: block;
   text-align: center;
   width: 96px;
@@ -697,7 +718,7 @@ input::placeholder {
   text-decoration: none;
 }
 
-.main-menu>.hot li>a:hover, .main-menu>.hot li>a:focus {
+.main-menu .hot li>a:hover, .main-menu .hot li>a:focus {
   color: #fff;
 }
 
@@ -762,28 +783,6 @@ input::placeholder {
 .main-menu:hover .hot-text,
 .main-menu:focus .hot-text {
   opacity: 1;
-}
-
-/*** side nav end  ***/
-@media (max-width: 1920px) {
-
-
-}
-@media (max-width: 1440px) {
-
-
-}
-@media (max-width: 1366px) {
-
-
-}
-@media (max-width: 1024px) {
-
-
-}
-@media (max-width: 975px) {
-
-
 }
 
 /***  主内容区域  ***/
